2003-07-17  Christophe Fergeau  <teuf@gnome.org>
	
	* modules/vfolder/vfolder-info.c: properly ignore // which can
	appear in <ItemDir> elements
	* modules/vfolder/vfolder-util.h: fixes debug macro so that it compiles
	with gcc 3.3

2003-07-17  Christophe Fergeau  <teuf@gnome.org>

	* test/test-mime-handlers.c: free all allocated memory before exiting
	to make valgrind happy (and to identify the leaks which are truly
	coming from gnome-vfs ;)

2003-07-17  Christophe Fergeau  <teuf@gnome.org>

	* test/test-mime.c: fixed a crash when using an absolute path

2003-07-11  Calum Benson  <calum.benson@sun.com>

	reviewed by: Alex Larsson <alexl@redhat.com>

	* modules/vfolder/applications-all-users.vfolder-info.in:
	Add an Accessibility menu to the Applications menu. Closes
	#116379, #115979 and #115981.

2003-07-11  Arvind Samptur  <arvind.samptur@wipro.com>

	Reviewed by: Stephen Browne  <stephen.browne@sun.com>

	* modules/cdemenu-desktop-method.c: (do_open),(do_open_directory),
	(do_read_directory): Replace chars such as '/' and '#' with
	appropriate % escape codes the then unescape again when used to
	search 	the dtwmrc files.

	* modules/cdemenu-desktop-method.c: (open_and_find_pointer_to_menu):
	Do an exact match of the menu names (strcmp) from the dtwrmc file
	and not just the first occurance of the string(strchr).

2003-07-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-thread-pool.c (new_thread_state):
	Make vfs thread stack size 256k

2003-07-08  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-directory.c (gnome_vfs_directory_visit):
	Handle NULL uris

	* libgnomevfs/gnome-vfs-cancellable-ops.c (gnome_vfs_get_file_info_uri_cancellable):
	Handle NULL uris

2003-07-04  Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-mime-info.c: (set_value_real):
	  added missing g_string_free (fixes leak)
	* test/Makefile.am: disabled test-resolv since it uses a private