@@ -1,4 +1,10 @@
 2003-07-17  Christophe Fergeau  <teuf@gnome.org>
+
+	* libgnomevfs/gnome-vfs-mime-info.c: fixed a memory leak, fixed a bug
+	where the last line of .mime and .keys files wouldn't be read properly
+	if it didn't end with a \n.
+
+2003-07-17  Christophe Fergeau  <teuf@gnome.org>
 	
 	* modules/vfolder/vfolder-info.c: properly ignore // which can
 	appear in <ItemDir> elements
